--- a/paper/paper.qmd
+++ b/paper/paper.qmd
@@ -1,6 +1,6 @@
 ---
-title: "Forecasting the 2024 U.S. Presidential Election"
-subtitle: "Using Aggregated Polling Data to Predict the Outcome of the 2024 Presidential Race"
+title: "Forecast of the 2024 Presidential Election through the Lens of Turbulent Battleground States"
+subtitle: "Kamala Harris Leads the Race With 276 Electoral Votes With Support in 3 of 4 Swing States"
 author: 
   - Andy Jiang
   - Onon Burentuvshin
