--- a/paper/references.bib
+++ b/paper/references.bib
@@ -90,7 +90,7 @@
   url = {https://projects.fivethirtyeight.com/polls/president-general/2024/national/},
 }
 
-@Manual{nyt_poll,
+@Manual{nytpoll,
     title = {You Ask, We Answer: How The Times/Siena Poll Is Conducted},
     author = {{The New York Times}},
     year = {2024},
