--- a/paper/paper.qmd
+++ b/paper/paper.qmd
@@ -1,6 +1,6 @@
 ---
-title: "Forecast of the 2024 Presidential Election through the Lens of Turbulent Battleground States"
-subtitle: "Kamala Harris Leads the Race With 276 Electoral Votes With Support in 3 of 4 Swing States"
+title: "Forecast of the 2024 Presidential Election through the Lens of Turbulent Swing States"
+subtitle: "Kamala Harris Leads the Race With 276 Electoral Votes With Support in 4 of 7 Swing States"
 author: 
   - Andy Jiang
   - Onon Burentuvshin
@@ -33,11 +33,11 @@ data <- read_parquet(here::here("data/02-analysis_data/analysis_data.parquet"))
 
 
 # Introduction
-The 2024 U.S. presidential election is shaping up to be one of the most closely watched and potentially pivotal elections in recent history. As public opinion shifts and political dynamics evolve, polling data has emerged as a critical tool for forecasting the outcome and understanding voter preferences. Polls provide a snapshot of where candidates stand at various points in time, reflecting the impact of campaigns, debates, and major events. However, the reliability and accuracy of individual polls can vary significantly based on methodology, sample size, and other factors, making it necessary to aggregate multiple sources of data for a more robust prediction.
+As the 2024 U.S. presidential election approaches, the race between Kamala Harris and Donald Trump reflects a deeply polarized electorate, particularly within key swing states. In an era where public opinion is continually shaped by a fast-paced media cycle and partisan divides, accurate election forecasting has never been more challenging or crucial. Swing states, where voter sentiment can tip the balance of the electoral college, have garnered particular attention. Traditional polls provide a snapshot of public opinion, but varying methodologies and sample biases limit their reliability. Thus, this paper seeks to bridge the gap in predictive accuracy by employing an aggregated “poll-of-polls” approach focused on capturing nuanced insights into voter behavior within these pivotal states.
 
-This paper aims to forecast the outcome of the 2024 U.S. presidential election by leveraging a "poll-of-polls" approach, which aggregates data from various pollsters to create a more comprehensive picture of the race. Poll-of-polls approach allows us to access a wide breatdth of data that mitigates potential biases and errors committed by any single pollster. By focusing on high-quality polls and conducting a detailed analysis of the polling trends for the two main candidates, Donald Trump and Kamala Harris, we seek to uncover patterns in voter support and potential factors influencing shifts in public opinion. Additionally, the paper examines the methodologies of different pollsters to assess their strengths and weaknesses, which can help identify possible biases in the aggregated data.
+This study builds a predictive model using aggregated polling data from a selection of high-quality pollsters, each rated above a minimum quality threshold. By concentrating on states historically known to sway election outcomes—such as Pennsylvania, Wisconsin, Nevada, and Michigan—this approach aims to provide a more resilient forecast against individual poll biases. The model examines demographic influences, candidate-specific factors, and recent endorsements, all while accounting for each state’s unique political landscape. Additionally, this paper critiques traditional polling methods, suggesting improvements in sampling and weighting techniques to achieve greater external validity. Given the substantial financial and temporal constraints inherent in polling, we propose an idealized methodology to enhance forecasting accuracy within a manageable budget of $100,000.
 
-The analysis will further explore the geographic distribution of support across key swing states, providing insights into the electoral landscape. Thus, our estimand will be the share of voter support for each presidential candidate in each swing state. Finally, the paper presents an idealized polling methodology with a $100,000 budget, designed to improve the accuracy and representativeness of election forecasts. By integrating multiple data sources and critically evaluating polling practices, this study aims to contribute to the ongoing discussion on the role of polling in democratic processes and election forecasting.
+The results of this analysis reveal a tentative lead for Kamala Harris, projecting 276 electoral votes in her favor, slightly above the 270 required to win. While she holds narrow but consistent margins in four critical swing states, her lead remains precarious in light of late-stage shifts in voter sentiment. These results emphasize the importance of demographic factors—such as Harris’s appeal among younger and immigrant voters—as well as the impact of recent high-profile endorsements for Trump, which could mobilize his base. The analysis suggests that the 2024 election will likely hinge on voter turnout in these contested states, highlighting the significance of demographic-targeted campaigns and last-minute electoral efforts in shaping the final outcome.
 
 
 
